# Aula08_Bootcamp

./: .gitignore  README.md  dados.csv  dados.parquet  etl.py  pipeline.py  pyproject.toml
