[project]
name = "aula08"
version = "1.0"
description = "conteúdo da aula08 - Inicio de ETL"
authors = [
    {name = "Thiago Crystyan",email = "crystyanjlc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
