[project]
name = "aula08"
version = "1.0"
description = "conteúdo da aula08 - Inicio de ETL"
authors = [
    {name = "Thiago Crystyan",email = "crystyanjlc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandera (>=0.24.0,<0.25.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
